# linedetector

./: CMakeLists.txt  install.sh
bindings/: line_detector.i  wrapper.hpp
cmake_modules/: util.cmake
include/: helper.hpp  line_detector.hpp
src/: line_detector.cpp  main.cpp
